mudança geral na persitencia de acordo com a aula